--- a/mainstyle.css
+++ b/mainstyle.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: blacklack;
 }
 
 #headbanner {
@@ -100,7 +100,7 @@ td {
     padding:15px;
 }
 
-div#post {
+div.post {
     background-color:white;
     border-radius: 8px;
     margin: 30px 5% 40px 5%;
