Just a few aesthetic changes
edited the faq (if percentages work like they should)
replace width in headbanner with object-fit: center; - it makes the headbanner a bit more precises since with width:100% there is a small bit hanging on the right side.

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -4,7 +4,8 @@ body {
 
 #headbanner {
     display: block;
-    width:100%;
+    //width:100%;
+    object-fit: contain;
     height: 175px;
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -155,4 +156,12 @@ div#main {
     margin: 5px 2% 5px 2%;
     display:block;
     padding:2px;
+}
+
+#faq-list {
+    list-style-type: none;
+}
+
+#faq-list-answer {
+    padding: 1% 0 0 3%;
 }
