--- a/mainstyle.css
+++ b/mainstyle.css
@@ -1,26 +1,43 @@
 body {
-    background-color: black;
+    background-color: white;
+    width=100%;
+    margin:0;
 }
 
 #headbanner {
-    display: block;
-    //width:100%;
+    width: 100%;
+    height: 200px;
     object-fit: contain;
-    height: 175px;
     background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-color: orange;
+    background-position:center; 
     background-size:cover;
-    border-width: 1px 1px 0px 1px;
-    border-style: solid;
-    border-color:white;
+    color:black;
+    text-align: center;
+    margin: 20px 0 0 0;
+    box-shadow: 0px 10px 50px;
+}
+
+#parallax {
+    /*Min height / width are to ensure visibility*/
+    min-width: 40px;
+    min-height: 40px;
+    object-fit: contain;
+    background-repeat: no-repeat;
+    background-position:center;
+    background-attachment: fixed;
+    background-size:contain;
+    text-align: center;
+    margin: 10px;
+    
 }
 
 li.horiznav {
     float:left;
     display: block;
     padding: 14px 16px;
-    color:gray;
+    max-width: 100px;
+    max-height:20px;
+    color:white;
     text-align: center;
     font-family: Arial;
 }
@@ -31,9 +48,20 @@ li.horiznav a {
     color:inherit;
 }
 
+img#navimg {
+    height: 20%;
+    width:20%;   
+    margin:0;
+    padding:0;
+}
+
 a {
     color:inhert;
     
+}
+
+#navspace {
+    padding: 0 0 0 13%;
 }
 
 #current {
@@ -42,17 +70,19 @@ a {
 }
 
 li.horiznav:hover {
-    color:black;
-    background-color:gray;
+    color:orange;
+    background-color:white;
 }
 
 ul.horiznav {
-    background-color: white;
+    background-color: black;
     overflow: hidden;
     margin: 0;
     padding: 0;
+    top:0;
     width: 100%;
     list-style-type: none;
+    position:fixed;
 }
 
 p {
@@ -77,7 +107,7 @@ h3 {
 }
 
 footer {
-    color:gray;
+    color:black;
     font-family: monospace;
     font-size: 12px;
     position:relative;
@@ -151,11 +181,12 @@ p#norm {
 }
 
 div#main {
-    background-color:white;
-    border-radius: 8px;
-    margin: 5px 2% 5px 2%;
+    background-color:floralwhite;
+    border-radius: 0px 0px 8px 8px;
+    margin: 0px 10% 0px 10%;
     display:block;
-    padding:2px;
+    padding:20px;
+    box-shadow: 5px 5px 50px;
 }
 
 #faq-list {
