--- a/mainstyle.css
+++ b/mainstyle.css
@@ -6,7 +6,7 @@ body {
 
 #headbanner {
     width: 100%;
-    height: 200px;
+   /*height: 200px;*/
     object-fit: contain;
     background-repeat: no-repeat;
     background-position:center; 
